--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbopack",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -47,7 +48,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.522.0",
     "next": "latest",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
